--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,10 @@
-#cover-page {
+section {
   font-family: "Poppins", sans-serif;
-  color: #000;
   padding: 0 8rem;
+}
+
+#cover-page {
+  color: #000;
 }
 
 nav {
