--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ nav {
 #heading {
   color: #000;
   font-weight: 800;
-  font-size: 5rem;
+  font-size: 6rem;
   display: inline;
 }
 
@@ -54,12 +54,14 @@ nav {
   margin-top: 1rem;
   font-weight: 500;
   font-weight: bold;
-  color: #2b2d30;
+  color: #343a40;
+
 }
 
 p, li {
   font-size: 1.1rem;
-  color : #44494e
+  color : #343a40;
+
 }
 
 .row {
@@ -68,7 +70,7 @@ p, li {
 
 footer {
   padding: 1.5rem;
-  background-color: #f1f1f1;
+  background-color: #000000;
   color: #fff;
   text-align: center;
 }
