--- a/css/styles.css
+++ b/css/styles.css
@@ -70,7 +70,7 @@ p, li {
 
 footer {
   padding: 1.5rem;
-  background-color: #000000;
+  background-color: #343a40;
   color: #fff;
   text-align: center;
 }
