--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+
 section {
   font-family: "Poppins", sans-serif;
   color: #000;
@@ -27,6 +28,12 @@ nav {
 
 #heading:hover {
   text-decoration: underline;
+}
+
+@media screen and (max-width: 400px) {
+  #heading {
+    font-size: 3rem;
+  }
 }
 
 #whoami {
